README
Setup
=====
~/Scala $ mkdir ensimebug
~/Scala $ cd sn
No such directory found via CDPATH environment variable
~/Scala $ cd ensimebug/
~/Scala/ensimebug $ mkdir -p src/main/scala
~/Scala/ensimebug $ mkdir -p src/main/resources
~/Scala/ensimebug $ mkdir -p src/main/java
~/Scala/ensimebug $ mkdir src/test/scala
Creating directory: No such file or directory, c:/Users/pmandal/Scala/ensimebug/src/test/scala
~/Scala/ensimebug $ mkdir -p src/test/scala
~/Scala/ensimebug $ mkdir -p src/test/resources
~/Scala/ensimebug $ mkdir -p src/test/java
~/Scala/ensimebug $ mkdir -p project
~/Scala/ensimebug $ sbt gen-ensime
[info] Loading global plugins from C:\Users\pmandal\.sbt\0.13\plugins
[info] Loading project definition from C:\Users\pmandal\Scala\ensimebug\project
[info] Updating {file:/C:/Users/pmandal/Scala/ensimebug/project/}ensimebug-build...
[info] Resolving org.scala-sbt#global-plugins;0.0 ...
[info] Resolving org.ensime#ensime-sbt;0.2.3 ...
[info] Resolving org.scalariform#scalariform_2.10;0.1.4 ...
[info] Resolving org.scala-lang#scala-library;2.10.5 ...
[info] Resolving org.scala-sbt#sbt;0.13.9 ...
[info] Resolving org.scala-sbt#main;0.13.9 ...
[info] Resolving org.scala-sbt#actions;0.13.9 ...
[info] Resolving org.scala-sbt#classpath;0.13.9 ...
[info] Resolving org.scala-lang#scala-compiler;2.10.5 ...
[info] Resolving org.scala-lang#scala-reflect;2.10.5 ...
[info] Resolving org.scala-sbt#interface;0.13.9 ...
[info] Resolving org.scala-sbt#io;0.13.9 ...
[info] Resolving org.scala-sbt#control;0.13.9 ...
[info] Resolving org.scala-sbt#launcher-interface;1.0.0-M1 ...
[info] Resolving org.scala-sbt#completion;0.13.9 ...
[info] Resolving org.scala-sbt#collections;0.13.9 ...
[info] Resolving jline#jline;2.11 ...
[info] Resolving org.scala-sbt#api;0.13.9 ...
[info] Resolving org.scala-sbt#compiler-integration;0.13.9 ...
[info] Resolving org.scala-sbt#incremental-compiler;0.13.9 ...
[info] Resolving org.scala-sbt#logging;0.13.9 ...
[info] Resolving org.scala-sbt#process;0.13.9 ...
[info] Resolving org.scala-sbt#relation;0.13.9 ...
[info] Resolving org.scala-sbt#compile;0.13.9 ...
[info] Resolving org.scala-sbt#classfile;0.13.9 ...
[info] Resolving org.scala-sbt#persist;0.13.9 ...
[info] Resolving org.scala-tools.sbinary#sbinary_2.10;0.4.2 ...
[info] Resolving org.scala-sbt#compiler-ivy-integration;0.13.9 ...
[info] Resolving org.scala-sbt#ivy;0.13.9 ...
[info] Resolving org.scala-sbt#cross;0.13.9 ...
[info] Resolving org.scala-sbt.ivy#ivy;2.3.0-sbt-c5d1b95fdcc1e1007740ffbecf4eb07abc51ec93 ...
[info] Resolving com.jcraft#jsch;0.1.46 ...
[info] Resolving org.scala-sbt#serialization_2.10;0.1.1 ...
[info] Resolving org.scala-lang.modules#scala-pickling_2.10;0.10.0 ...
[info] Resolving org.scalamacros#quasiquotes_2.10;2.0.1 ...
[info] Resolving org.json4s#json4s-core_2.10;3.2.10 ...
[info] Resolving org.json4s#json4s-ast_2.10;3.2.10 ...
[info] Resolving com.thoughtworks.paranamer#paranamer;2.6 ...
[info] Resolving org.spire-math#jawn-parser_2.10;0.6.0 ...
[info] Resolving org.spire-math#json4s-support_2.10;0.6.0 ...
[info] Resolving org.scala-sbt#run;0.13.9 ...
[info] Resolving org.scala-sbt#task-system;0.13.9 ...
[info] Resolving org.scala-sbt#tasks;0.13.9 ...
[info] Resolving org.scala-sbt#tracking;0.13.9 ...
[info] Resolving org.scala-sbt#cache;0.13.9 ...
[info] Resolving org.scala-sbt#testing;0.13.9 ...
[info] Resolving org.scala-sbt#test-agent;0.13.9 ...
[info] Resolving org.scala-sbt#test-interface;1.0 ...
[info] Resolving org.scala-sbt#main-settings;0.13.9 ...
[info] Resolving org.scala-sbt#apply-macro;0.13.9 ...
[info] Resolving org.scala-sbt#command;0.13.9 ...
[info] Resolving org.scala-sbt#logic;0.13.9 ...
[info] Resolving org.scala-sbt#compiler-interface;0.13.9 ...
[info] Resolving org.scala-sbt#precompiled-2_8_2;0.13.9 ...
[info] Resolving org.scala-sbt#precompiled-2_9_2;0.13.9 ...
[info] Resolving org.scala-sbt#precompiled-2_9_3;0.13.9 ...
[info] Resolving org.scala-lang#jline;2.10.5 ...
[info] Resolving org.fusesource.jansi#jansi;1.4 ...
[info] Done updating.
[info] Set current project to ensimebug (in build file:/C:/Users/pmandal/Scala/ensimebug/)
[info] ENSIME update. Please vote for https://github.com/sbt/sbt/issues/2266
[info] Updating {file:/C:/Users/pmandal/Scala/ensimebug/}root...
[info] Resolving org.scala-lang#scala-library;2.11.7 ...
[info] Resolving org.scala-lang#scala-compiler;2.11.7 ...
[info] Resolving org.scala-lang#scala-reflect;2.11.7 ...
[info] Resolving org.scala-lang.modules#scala-xml_2.11;1.0.4 ...
[info] Resolving org.scala-lang.modules#scala-parser-combinators_2.11;1.0.4 ...
[info] Resolving jline#jline;2.12.1 ...
[info] Done updating.
[info] ENSIME updateClassifiers. Please vote for https://github.com/sbt/sbt/issues/1930
[info] Resolving org.scala-lang#scala-library;2.11.7 ...
[info] Resolving org.scala-lang#scala-compiler;2.11.7 ...
[info] Resolving org.scala-lang#scala-reflect;2.11.7 ...
[info] Resolving org.scala-lang.modules#scala-xml_2.11;1.0.4 ...
[info] Resolving org.scala-lang.modules#scala-parser-combinators_2.11;1.0.4 ...
[info] Resolving jline#jline;2.12.1 ...
[info] ENSIME processing root (ensimebug)
[warn] Some source directories do not exist and will be ignored by ENSIME.
[warn] If this is not what you want, create empty directories and re-run this command.
[warn] For example (only showing 5): C:\Users\pmandal\Scala\ensimebug\target\scala-2.11\src_managed\main,C:\Users\pmandal\Scala\ensimebug\src\main\scala-2.11,C:\Users\pmandal\Scala\ensimebug\target\scala-2.11\src_managed\test,C:\Users\pmandal\Scala\ensimebug\src\test\scala-2.11 
Java HotSpot(TM) 64-Bit Server VM warning: ignoring option MaxPermSize=256m; support was removed in 8.0
~/Scala/ensimebug $ cd ../fpis/.gitignore .
Path substring '../fpis/.gitignore' not found
~/Scala/ensimebug $ cp ../fpis/.gitignore .

Error Repro
===========
STEP#1
------
C-x C-f ~/Scala/ensimebug/src/main/scala/functions.scala <RET>

STEP#2
------
m-x ensime <RET>

STEP#3
------
C-c C-b s

STEP#4
------
C-c C-b c

compile
[info] Compiling 1 Scala source to C:\Users\pmandal\Scala\ensimebug\target\scala-2.11\classes...
[success] Total time: 5 s, completed Dec 31, 2015 10:16:19 PM
> 

STEP#5
------
C-c C-v z

Welcome to Scala version 2.11.7 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_66).
Type in expressions to have them evaluated.
Type :help for more information.

scala>

STEP#6 (Demonstrating the issue)
--------------------------------
Trying to load with C-c C-v l

scala> Loading c:\Users\pmandal\Scala\ensimebug\src\main\scala\functions.scala...
<console>:11: error: not found: value DataStructures
         def foldr[A, B](list: DataStructures.List[A], acc: B)(f: (A, B) => B): B = list match {
                               ^
<console>:12: error: not found: value DataStructures
           case DataStructures.Nil => acc
                ^
<console>:13: error: not found: value DataStructures
           case DataStructures.Cons(x, xs) => f(x, foldr(xs, acc)(f))
                ^
<console>:16: error: not found: value DataStructures
         def foldl[A, B](list: DataStructures.List[A], acc: B)(f: (B, A) => B): B = list match {
                               ^
<console>:17: error: not found: value DataStructures
           case DataStructures.Nil => acc
                ^
<console>:18: error: not found: value DataStructures
           case DataStructures.Cons(x, xs) => foldl(xs, f(acc, x))(f)
                ^
<console>:21: error: not found: value Functional
         val numlistfrzeroprimed = Functional.foldr(numlist, 0)_
                                   ^
<console>:22: error: not found: value Functional
         val numlistfroneprimed = Functional.foldr(numlist, 1)_
                                  ^
<console>:23: error: not found: value Functional
         val numlistflzeroprimed = Functional.foldl(numlist, 0)_
                                   ^
<console>:24: error: not found: value Functional
         val numlistfloneprimed = Functional.foldl(numlist, 1)_
                                  ^
STEP#7 (Candidate solution)
---------------------------
scala> :paste c:\Users\pmandal\Scala\ensimebug\src\main\scala\functions.scala
Pasting file c:\Users\pmandal\Scala\ensimebug\src\main\scala\functions.scala...
defined object Functional
defined object DataStructures

Observations
============
ensime-inf-load-file uses :load to load the file
:load sequentially interprets and loads
Thus if there is a reference to a future construct it cannot be resolved.
:paste works fine instead. More info here..
http://blog.japila.pl/2013/04/when-in-scala-repl-paste-might-be-your-better-friend-than-load/